Fixed spacing

--- a/src/app/components/main-content/main-content.component.scss
+++ b/src/app/components/main-content/main-content.component.scss
@@ -52,12 +52,12 @@ p {
 }
   
 .left {
-    width: 40%;
+    width: 41%;
 }
   
 .right {
-    width: 60%;
-    padding-left: 4%;
+    width: 59%;
+    padding-left: 6%;
     border-left: 3.5px solid #393939;
 }
   
